Add personal website content and styling
My about website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lazrin | Personal Website</title>
+  <meta name="description" content="Personal website of Lazrin" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f4f6f8;
+      color: #333;
+    }
+    header {
+      background: #1e293b;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+    }
+    section {
+      max-width: 800px;
+      margin: 30px auto;
+      background: white;
+      padding: 25px;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #1e293b;
+    }
+    a {
+      color: #2563eb;
+      text-decoration: none;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #666;
+    }
+    #img{
+      width:360px;
+      display: center;
+      height: 290px;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <img src="https://i.ibb.co/3mYqfF8X/file-00000000722071fd8e2f0181b35e1fb4-1.png" alt="file-00000000722071fd8e2f0181b35e1fb4-1" border="0">
+  <h1>Lazrin</h1>
+  <p>Student | Web Learner | Creator</p>
+</header>
+
+<section>
+  <h2>About Me</h2>
+  <img src="https://i.ibb.co/3mYqfF8X/file-00000000722071fd8e2f0181b35e1fb4-1.png" alt=""id="img"/>
+  <p>
+    My name is <strong>Lazrin</strong>. I was born in <strong>2005</strong>. I am someone who is curious about the world and loves to learn new things.
+  </p>
+  <p>
+    <img src="https://files.fm/f/m6av69nzeu" alt="" />
+    I started school in <strong>Bonon</strong>, where I lived with my father. At that time, my mother was living in another city because she was continuing her studies. When I grew older, around the age of 8, I went to live with my grandmother. She took care of me and supported me as I grew up.
+  </p>
+  <p>
+    I like <strong>science, English, and music</strong>. I enjoy discovering new ideas, learning how things work, and improving myself every day.
+  </p>
+  <p>
+    One of my main skills is that I am <strong>good at English</strong>, and I continue to practise and develop it.
+  </p>
+</section>
+
+<section>
+  <h2>What I Do</h2>
+  <ul>
+    <li>Learning HTML, CSS, and JavaScript</li>
+    <li>Creating small websites and projects</li>
+    <li>Improving my English skills</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <p>Email: <a href="misterzhightman@gmail.com">misterzhightman@gmail.com</a></p>
+  <p>TikTok: <a href="#">Lazrin</a></p>
+</section>
+
+<footer>
+  <p>© 2025 Lazrin. All rights reserved.</p>
+</footer>
+</body>
+</html>
 
